# DigitalGarden

./: 3rf3f.txt  README.md  README.ua.md  draw_plant.py  environment.yml  fas.txt  fasfadsa.txt  fddfe333.txt  generate_plants.py  hight_load_plant.txt  open.py  pyproject.toml  requirements.txt  script.js  test  test.txt  yguy87g8.txt
.github/workflows/: plant_generator.yml  plant_generator_test.yml  tools.yml  tools_test.yml
PlantGenerator/plantgenerator/: __init__.py
Tools/tests/: color_test.py
Tools/tools/: vector.py
app/: :  :w  __main__.py  async_drawing.py  fsm.py  generator_frame.py  gui.py  gui_test_patch.py  mass_smash_frame.py  menu_frame.py  method_config.py  open.py  painter.py  root.py  smash_plant.py  test.py  test_drawing.py
docs/: CNAME  index.html  script.js  style.css
orangery/: 123.txt  1234.txt  Abies_ceridifolius.txt  Acanthus_monticola.txt  Achillea_canescens.txt  Achillea_farinosa.txt  Aconitum_parvifolia.txt  Actaea_drummondii.txt  Aesculus_macro.txt  Agapanthus_conferta.txt  Ageratina_occidentalis.txt  Ajuga_eychlora.txt  Alcea_bealei.txt  Alchemilla_nitida.txt  Alnus_officnarum.txt  Amelanchier_rosea.txt  Amelopsos_junceum.txt  Ammi_sinense.txt  Andromeda_aerea.txt  Andromeda_cantoniensis.txt  Anemone_pennata.txt  Anemone_villosa.txt  Anemonella_calomus.txt  Anemonella_glauca.txt  Anethum_rigida.txt  Antennaria_rosea.txt  Anthericum_alnifolia.txt  Antrhiscus_saponaria.txt  Aplectrum_didyma.txt  Arachiodes_heldreichii.txt  Arbutus_lucidum.txt  Ardisia_deltoides.txt  Aristolochia_psycnostachya.txt  Artemisia_biloba.txt  Artemisia_bungeanus.txt  Aruncus_pavia.txt  Asimina_triacanthos.txt  Aspidistra_balsamea.txt  Aspidistra_peregrinum.txt  Aster_nubigena.txt  (+215 more)
plant_generator/: README.md  pyproject.toml
plant_generator/plant_generator/: __init__.py  agent.py  genom.py  plant.py  smash.py  test_average
plant_generator/tests/: test_agent.py  test_genom.py  test_plant.py
plantgenerator/: pyproject.toml
plantgenerator/plantgenerator/: agent.py
resources/: draw_plant.py  generate_plants.py  rename_plants.py
src/: color.py  vector.py
src/plantgenerator/: __init__.py  genom.py
src/plantgenerator/utils/: __init__.py  color.py
tests/: color_test.py  vector_test.py
tools/: README.md  pyproject.toml
tools/tests/: test_color.py  test_vector.py
tools/tools/: __init__.py  circle.py  color.py  planticus.py  transpose.py  vector.py
