[tool.poetry]
name = "digitalgarden"
version = "0.1.0"
description = "Digital Garden with Digital Plants (Project for Programing Course 2024)"
authors = [ "Alex Katrenko <112182502+codemorphist@users.noreply.github.com>",
            "karbyshevillia <158076825+karbyshevillia@users.noreply.github.com>"]
license = "GPL-3.0-only"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

plant_generator = { path="./plant_generator/" }
tools = { path="./tools/" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

