[tool.poetry]
name = "plant_generator"
version = "0.1.0"
description = "Generator of Digital Plants"
authors = [ "Alex Katrenko <112182502+codemorphist@users.noreply.github.com>",
            "karbyshevillia <158076825+karbyshevillia@users.noreply.github.com>"]
license = "GPL-3.0-only"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tools = { path = "../tools/" }

[tool.poetry.group.test.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
