[tool.poetry]
name = "PlantGenerator"
version = "0.1.0"
description = "Generator for Digital Plants"
authors = [ "Alex Katrenko <112182502+codemorphist@users.noreply.github.com>",
            "karbyshevillia <158076825+karbyshevillia@users.noreply.github.com>"]
license = "GPL-3.0-only"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
