[tool.poetry]
name = "tools"
version = "0.1.1"
description = "Package with useful tools"
authors = [ "Alex Katrenko <112182502+codemorphist@users.noreply.github.com>",
            "karbyshevillia <158076825+karbyshevillia@users.noreply.github.com>"]
license = "GPL-3.0-only"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
